# c12sim

./: CMakeLists.txt  README.md  c12sim.cc  c12sim.h.in  exampleB1.cc  init_default.mac.in
data/gdml/: beamline.gdml
data/lundfiles/: eg_He4_4000.lund  eg_LH2_ep_2000.lund
examples/: vis.mac
include/: B1DetectorConstruction.hh  B1DetectorMessenger.hh  B1EventAction.hh  B1PrimaryGeneratorAction.hh  B1RunAction.hh  B1SteppingAction.hh  BeamOnTargetPrimaryGeneratorAction.hh  BeamlineDetectorGeometry.h  C12MagneticField.h  DriftChamberDetectorGeometry.h  DriftChamberSensitiveDetector.h  ECDetectorGeometry.h  ECSensitiveDetector.h  HTCCDetectorGeometry.h  HTCCSensitiveDetector.h  MicromegasVertexTrackerDetectorGeometry.h  PMTArraySensitiveDetector.h  RecoilChamberDetectorGeometry.h  RecoilChamberSensitiveDetector.h  RecoilHodoDetectorGeometry.h  RecoilHodoDetectorGeometry2.h  RecoilHodoDetectorGeometry3.h  RecoilScintHit.hh  RecoilScintSensitiveDetector.hh  ScintHit.hh  ScintTileDetectorGeometry.hh  ScintTileSensitiveDetector.hh  SensitiveRegionDetector.h  SiPMHit.hh  SiPMSD.hh  SiTrackerSensitiveDetector.h  SiVertexTrackerDetectorGeometry.h  SiliconVertexTrackerDetectorGeometry.h  SimplePrimaryGeneratorAction.hh  SimulationManager.h  SimulationMessenger.h  SolenoidDetectorGeometry.h  SteppingAction.hh  TorusDetectorGeometry.h  TrackingAction.hh  (+6 more)
mac/: fastMC.mac  vis.mac  vis_old.mac  vis_parallel.mac
scripts/: DC_hit_sources.cxx  DC_occupancy2.cxx  DC_occupancy3.cxx  DC_occupancy4.cxx  DC_occupancy_beam_on_target.cxx  DC_occupancy_beam_on_target_11GeV.cxx  DC_occupancy_curlers.cxx  DC_occupancy_sectors.cxx  DC_occupancy_source.cxx  HelixFit.cxx  browse.cxx  eve_beamline_hits.cxx  eve_geometry.cxx  local_pos.cxx  run_all_occupancy
src/: B1ActionInitialization.cc  B1DetectorConstruction.cc  B1DetectorMessenger.cc  B1EventAction.cc  B1OpticalPhysics.cc  B1ParallelWorldConstruction.cc  B1PrimaryGeneratorAction.cc  B1Run.cc  B1RunAction.cc  B1SteppingAction.cc  BeamOnTargetPrimaryGeneratorAction.cc  BeamTestSD.cc  BeamlineDetectorGeometry.cc  C12MagneticField.cc  DriftChamberDetectorGeometry.cc  DriftChamberSensitiveDetector.cc  ECDetectorGeometry.cc  ECSensitiveDetector.cc  HTCCDetectorGeometry.cc  HTCCSensitiveDetector.cc  MicromegasVertexTrackerDetectorGeometry.cc  PMTArraySensitiveDetector.cc  RecoilChamberDetectorGeometry.cc  RecoilChamberSensitiveDetector.cc  RecoilHodoDetectorGeometry.cc  RecoilHodoDetectorGeometry2.cc  RecoilHodoDetectorGeometry3.cc  RecoilScintHit.cc  RecoilScintSensitiveDetector.cc  ScintHit.cc  ScintTileDetectorGeometry.cc  ScintTileSensitiveDetector.cc  SensitiveRegionDetector.cc  SiPMHit.cc  SiPMSD.cc  SiTrackerSensitiveDetector.cc  SiVertexTrackerDetectorGeometry.cc  SiliconVertexTrackerDetectorGeometry.cc  SimplePrimaryGeneratorAction.cc  SimulationManager.cc  (+11 more)
